@@ -96,6 +96,12 @@ When more than one image is referenced, only the first one will be in the feed:
 >>> repository = zope.component.getUtility(
 ...     zeit.cms.repository.interfaces.IRepository)
 >>> images.images = (group, repository['2006']['DSC00109_2.JPG'],)
+>>> checked_out = zeit.cms.checkout.interfaces.ICheckoutManager(
+...     content).checkout()
+>>> images = zeit.content.image.interfaces.IImages(checked_out)
+>>> images.images = (group, )
+>>> content = zeit.cms.checkout.interfaces.ICheckinManager(
+...     checked_out).checkin()
 >>> feed.updateMetadata(content)
 >>> print feed.xml_source
 <channel xmlns:xsd="http://www.w3.org/2001/XMLSchema" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns:py="http://codespeak.net/lxml/objectify/pytype">
@@ -103,9 +109,32 @@ When more than one image is referenced, only the first one will be in the feed:
   <container>
     <block href="http://xml.zeit.de/testcontent">
       ...
+      <references/>
       <image base-id="http://xml.zeit.de/image-group" type="jpg">
         <bu xsi:nil="true"/>
       </image>
+    </block>
+  </container>
+  <object_limit py:pytype="int">50</object_limit>
+</channel>
+
+
+When we have no image referenced it is also removed from the channel:
+
+>>> checked_out = zeit.cms.checkout.interfaces.ICheckoutManager(
+...     content).checkout()
+>>> images = zeit.content.image.interfaces.IImages(checked_out)
+>>> images.images = ()
+>>> content = zeit.cms.checkout.interfaces.ICheckinManager(
+...     checked_out).checkin()
+>>> feed.updateMetadata(content)
+>>> print feed.xml_source,
+<channel xmlns:xsd="http://www.w3.org/2001/XMLSchema" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns:py="http://codespeak.net/lxml/objectify/pytype">
+  <title/>
+  <container>
+    <block href="http://xml.zeit.de/testcontent">
+      ...
+      <references/>
     </block>
   </container>
   <object_limit py:pytype="int">50</object_limit>
@@ -117,6 +146,12 @@ checkin of the imagegroup. Change the metadata of the group.
 
 Before:
 
+>>> checked_out = zeit.cms.checkout.interfaces.ICheckoutManager(
+...     content).checkout()
+>>> images = zeit.content.image.interfaces.IImages(checked_out)
+>>> images.images = (group, )
+>>> content = zeit.cms.checkout.interfaces.ICheckinManager(
+...     checked_out).checkin()
 >>> import lxml.etree
 >>> print lxml.etree.tostring(repository['testcontent'].xml, pretty_print=True)
 <testtype>
