@@ -4,6 +4,9 @@ zeit.cms changes
 1.1.11 (unreleased)
 -------------------
 
+- Wenn ein Bild von einem Artikel entfernt wird, wird dies jetzt auch im
+  Channel reflektiert.
+
 1.1.10 (2008-09-16)
 -------------------
 
